--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
       name="description"
       content="Create menus for the week"
     />
-    <!--<base href="/">-->
-    <base href="%PUBLIC_URL%/">
+    <!--<base href="/" target="_self">-->
+    <base href="%PUBLIC_URL%" target="_self">
     <!--<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />-->
     <!--
       manifest.json provides metadata used when your web app is installed on a
