Add three console.log for .env variables

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Create menus for the week"
     />
     <!--<base href="/" target="_self">-->
-    <base href="%PUBLIC_URL%" target="_self">
+    <base href="%PUBLIC_URL%/" target="_self">
     <!--<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />-->
     <!--
       manifest.json provides metadata used when your web app is installed on a
